# ccvault

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude/: settings.json
.claude/skills/dev-rules/: SKILL.md
scripts/: test_ai_integration.py  test_gemini_tools.py
src/dnd_manager/: __init__.py  app.py  config.py  main.py
src/dnd_manager/ai/: __init__.py  anthropic_provider.py  base.py  context.py  gemini.py  ollama_provider.py  openai_provider.py  providers.py  router.py  semantic.py
src/dnd_manager/ai/tools/: __init__.py  executor.py  registry.py  schema.py  session.py
src/dnd_manager/ai/tools/definitions/: __init__.py  character_tools.py  combat_tools.py  creation_tools.py  custom_tools.py  inventory_tools.py  query_tools.py  ruleset_tools.py  spell_tools.py
src/dnd_manager/ai/tools/handlers/: __init__.py  character_handlers.py  combat_handlers.py  creation_handlers.py  custom_handlers.py  inventory_handlers.py  query_handlers.py  ruleset_handlers.py  spell_handlers.py
src/dnd_manager/data/: __init__.py  backgrounds.py  balance.py  balance_guidelines.yaml  classes.py  custom.py  feats.py  items.py  library.py  magic_items.py  monsters.py  prerequisites.py  skills.py  species.py  spells.py  subclasses.py  weapon_mastery.py
src/dnd_manager/dice/: __init__.py  parser.py  roller.py
src/dnd_manager/export/: __init__.py  markdown.py  pdf.py
src/dnd_manager/export/templates/: character_sheet.html.j2  character_sheet.md.j2
src/dnd_manager/import_char/: __init__.py  parser.py  pdf_reader.py  prompts.py  session.py
src/dnd_manager/models/: __init__.py  abilities.py  character.py
src/dnd_manager/rulesets/: __init__.py  base.py  dnd2014.py  dnd2024.py  tov.py
src/dnd_manager/storage/: __init__.py  migrations.py  notes.py  sync.py  yaml_store.py
src/dnd_manager/ui/: __init__.py
src/dnd_manager/ui/screens/: __init__.py  ai.py  base.py  browsers.py  creation.py  dashboard.py  editors.py  gameplay.py  import_wizard.py  level.py  navigation.py  notes.py  panels.py  rest.py  utility.py  widgets.py
src/dnd_manager/ui/styles/: app.tcss
tests/: __init__.py  test_abilities.py  test_ai_character_creation.py  test_ai_tools.py  test_app_startup.py  test_character.py  test_character_creation_ui.py  test_config.py  test_creation_tools.py  test_dashboard_logic.py  test_dashboard_ui.py  test_dice.py  test_equipment_effects.py  test_rulesets.py  test_storage.py  test_valeria_character.py
tests/fixtures/: test_character_valeria.md
